# vivacity_occupancy_example

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
dummy_message_sender/: dtfs_filtered_raw.txt  dtfs_large_artificial.txt
proto-buffet/: classifying_detector_class_types.proto  countline_crossing.proto  detector_tracker_frame.proto  point.proto  tracing_context.proto  vector.proto  zonal_features.proto
proto-buffet/core/: classifying_detector_class_types.proto  countline_crossing.proto  detector_tracker_frame.proto  point.proto  tracing_context.proto  vector.proto  zonal_features.proto
src/: main.c
vivacity-proto-buffet-options/core/: classifying_detector_class_types.options  zonal_features.options
